<resources>
    <string name="app_name">MobileExercice_2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview_itens">Digite o nome do paciente</string>
    <string name="edit_paciente">Nome do paciente</string>
    <string name="button_add_paciente">Adicionar</string>
    <string name="nome_do_paciente">Nome do paciente</string>
    <string name="btn_popup_voltar">Voltar</string>
    <string name="textview_popup_nome">Nome</string>
    <string name="textview_void" />
    <string name="textview_popup_cidade">Cidade</string>
    <string name="Idade">Idade</string>
    <string name="tipo_de_sangue">Tipo de sangue</string>
    <string name="btn_popup_editar">Editar</string>
    <string name="button_add_voltar">Voltar</string>
    <string name="button_add_edit">Editar</string>
    <string name="title_activity_main2">MainActivity</string>

    <string-array name="tipoSangue">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
</resources>