<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_info_paciente"
        android:layout_width="291dp"
        android:layout_height="91dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/textview_void"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button_popup_editar"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        android:text="@string/btn_popup_editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_info_paciente"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_popup_voltar"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_500"
        android:text="@string/btn_popup_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_info_paciente"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>